# hackathon-todo-evolution

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  test.db  todo.db  vercel.json
.claude/agents/: README.md
.claude/skills/: README.md
.github/workflows/: build-backend.yml  build-frontend.yml  deploy-cloud.yml  sync_to_hf.yml
.specify/memory/: constitution.md
Better_auth_files/: sign-in.tsx
backend/: .dockerignore  .env.example  .gitignore  =0.1.9  Dockerfile  README.md  add_column.py  apply_indexes.py  main.py  migrate_fix_password_hash.py  pyproject.toml  test.db  todo.db
backend/alembic/: env.py
backend/alembic/versions/: 001_add_reminder_at_column.py  add_indexes.py
backend/app/: __init__.py  auth.py  database.py  jobs.py  logging_config.py  main.py  models.py  rate_limiter.py  subscribers.py
backend/app/mcp_server/: __init__.py  server.py  tools.py
backend/app/routes/: __init__.py  chat.py  jobs.py  notifications.py  tasks.py
backend/app/services/: __init__.py  agent_service.py  conversation_service.py  event_publisher.py  notification_service.py  qdrant_service.py  recurrence_service.py  task_service.py
backend/migrations/: env.py
backend/migrations/versions/: 057bf216671c_add_notification_table_and_parent_task_.py  c4df718d14ac_initial_schema.py
backend/tests/: __init__.py  conftest.py  test_ai_accuracy.py  test_chat.py  test_events_nfr.py  test_notifications.py  test_recurrence.py  test_reminders.py  test_smoke.py  test_tasks.py
dapr-components/: README.md  config.yaml  kafka-pubsub.yaml  secretstore.yaml  statestore.yaml
docs/: deployment-guide.md  kubectl-ai-examples.md  minikube-deployment.md
docs/ri/: docker-fundamentals.md  huggingface-fundamentals.md
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  todo-app.db-shm  todo-app.db-wal  todo.db  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/better-auth_migrations/: 2026-01-30T05-09-14.459Z.sql
frontend/components/: chat-input.tsx  chat.tsx  confirm-dialog.tsx  conversation-list.tsx  empty-state.tsx  floating-chat-button.tsx  logout-button.tsx  notification-bell.tsx  notification-dropdown.tsx  task-edit-dialog.tsx  task-filter-controls.tsx  task-form.tsx  task-item.tsx  task-list.tsx  task-skeleton.tsx  task-sort-controls.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/hooks/: use-task-list.ts
frontend/lib/: api.ts  auth-client.ts  auth.ts  email.ts  theme.ts  toast.ts
hackathon_docs/: Hackathon II - Todo Spec-Driven Development.md  Hackathon2-guidelines.md  Hackathon2_Announcement.md
helm/todo-app/: Chart.yaml  values-cloud.yaml  values.yaml
scripts/: deploy-minikube.sh  install-redpanda.sh  setup-oke.sh
src/: __init__.py
tests/: __init__.py
(+256 files in other folders)
